<resources>
    <string name="app_name">Chatty</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="chat_app">Chatty</string>
    <string name="log_in_text">Login</string>
    <string name="register_btn_text">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="forgot_your_password_text">Forgot your password?</string>
    <string name="reset_btn_text">Reset</string>
    <string name="by_clicking_reset">By clicking Reset, you will receive an email to reset your password</string>
    <string name="logout_menu">Logout</string>
    <string name="new_account_create_text">Create account</string>
    <string name="hint_username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search...</string>
    <string name="type_a_message_hint">Type a message</string>
    <string name="profile_heading_text">Profile</string>
    <string name="sample_is_last_message">This is last message...</string>
</resources>
